@@ -15,6 +15,7 @@ V.15.0.0
 - [MINOR] Refactored OneAuthTestApp infra in order to process LTW test cases (#2136)
 - [PATCH] Fix NPE in OTEL code for DCF flow (#2139)
 - [PATCH] Fixed debug apps not recognized as active broker issue (#2138)
+- [MINOR] Add checkMode method to msaltestapp infra (#2141)
 - [MINOR] Update TokenRequest.java with NAA params (#2143)
 
 V.14.0.1
